--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_111","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"L:\\3-2\\System Programming\\ChopLifter.ver.1.0\\ChopLifter","type":"PROJECT","hints":{"PROJECT_NAME":"ChopLifter"}},"ABSENT"]]
